packages/bobbin-wasm-utils/.rsw/rsw.err
[INFO]: 🎯  Checking for the Wasm target...
[INFO]: 🌀  Compiling to Wasm...
   Compiling bobbin-wasm-utils v0.1.0 (/Users/connormeehan/projects/personal/bearbroidery/packages/bobbin-wasm-utils/bobbin-wasm-utils)
error[E0432]: unresolved import `ts_rs`
 --> src/font/parser.rs:6:5
  |
6 | use ts_rs::TS;
  |     ^^^^^ use of undeclared crate or module `ts_rs`

error: cannot determine resolution for the derive macro `TS`
   --> src/font/parser.rs:117:10
    |
117 | #[derive(TS)]
    |          ^^
    |
    = note: import resolution is stuck, try simplifying macro imports

error: cannot find attribute `ts` in this scope
   --> src/font/parser.rs:118:3
    |
118 | #[ts(export)]
    |   ^^

error: cannot determine resolution for the macro `__wbindgen_if_not_std`
   --> src/font/parser.rs:119:1
    |
119 | #[wasm_bindgen]
    | ^^^^^^^^^^^^^^^
    |
    = note: import resolution is stuck, try simplifying macro imports
    = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot determine resolution for the derive macro `TS`
  --> src/font/parser.rs:37:10
   |
37 | #[derive(TS)]
   |          ^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: cannot find attribute `ts` in this scope
  --> src/font/parser.rs:38:3
   |
38 | #[ts(export)]
   |   ^^

error: cannot determine resolution for the derive macro `TS`
  --> src/font/parser.rs:19:10
   |
19 | #[derive(TS)]
   |          ^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: cannot find attribute `ts` in this scope
  --> src/font/parser.rs:20:3
   |
20 | #[ts(export)]
   |   ^^

warning: unused macro definition: `console_log`
  --> src/tesselator.rs:19:14
   |
19 | macro_rules! console_log {
   |              ^^^^^^^^^^^
   |
   = note: `#[warn(unused_macros)]` on by default

For more information about this error, try `rustc --explain E0432`.
warning: `bobbin-wasm-utils` (lib) generated 1 warning
error: could not compile `bobbin-wasm-utils` due to 8 previous errors; 1 warning emitted
Error: Compiling your crate to WebAssembly failed
Caused by: Compiling your crate to WebAssembly failed
Caused by: failed to execute `cargo build`: exited with exit status: 101
  full command: cd "bobbin-wasm-utils" && "cargo" "build" "--lib" "--target" "wasm32-unknown-unknown"
